# metamod-r

.github/workflows/: build.yml
metamod/: CMakeLists.txt
metamod/extra/: config.ini
